--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.2",
-    "debug": "^3.1.0",    
+    "debug": "^3.1.0",
     "http": "0.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.14.12"
   }
 }
