--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.2",
+    "body-parser": "^1.18.2",
     "debug": "^3.1.0",
-    "http": "0.0.0"
+    "express": "^4.16.2",
+    "http": "0.0.0",
+    "mongoose": "^5.0.4"
   },
   "devDependencies": {
     "nodemon": "^1.14.12"
